--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "ejs": "^2.5.8",
     "express": "^4.16.3",
+    "mongoose": "^5.0.14",
     "passport": "^0.4.0",
-    "passport-google-oauth": "^1.0.0"
+    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth20": "^1.0.0"
   }
 }
